@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2012 Xeiam LLC http://xeiam.com
+ * Copyright (C) 2012 - 2013 Xeiam LLC http://xeiam.com
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of
  * this software and associated documentation files (the "Software"), to deal in
@@ -24,24 +24,25 @@ package com.xeiam.xchange.mtgox.v1;
 import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.net.URLEncoder;
-import java.security.GeneralSecurityException;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import org.joda.money.BigMoney;
 
 import com.xeiam.xchange.CurrencyPair;
-import com.xeiam.xchange.ExchangeException;
-import com.xeiam.xchange.utils.CryptoUtils;
-import com.xeiam.xchange.utils.HttpTemplate;
 import com.xeiam.xchange.utils.MoneyUtils;
 
 /**
  * A central place for shared Mt Gox properties
  */
-public class MtGoxUtils {
+public final class MtGoxUtils {
+
+  /**
+   * private Constructor
+   */
+  private MtGoxUtils() {
+
+  }
 
   public static final List<CurrencyPair> CURRENCY_PAIRS = Arrays.asList(
 
@@ -136,26 +137,12 @@ public class MtGoxUtils {
     return CURRENCY_PAIRS.contains(currencyPair);
   }
 
-  /**
-   * Generates necessary authentication header values for MtGox
-   * 
-   * @param postBody
-   * @return
-   */
-  public static Map<String, String> getMtGoxAuthenticationHeaderKeyValues(String postBody, String apiKey, String secretKey) {
+  public static String urlEncode(String str) {
 
     try {
-
-      Map<String, String> headerKeyValues = new HashMap<String, String>();
-      headerKeyValues.put("Rest-Key", URLEncoder.encode(apiKey, HttpTemplate.CHARSET_UTF_8));
-      headerKeyValues.put("Rest-Sign", CryptoUtils.computeSignature("HmacSHA512", postBody, secretKey));
-      return headerKeyValues;
-
-    } catch (GeneralSecurityException e) {
-      throw new ExchangeException("Problem generating secure HTTP request (General Security)", e);
+      return URLEncoder.encode(str, "UTF-8");
     } catch (UnsupportedEncodingException e) {
-      throw new ExchangeException("Problem generating secure HTTP request  (Unsupported Encoding)", e);
+      throw new RuntimeException("Problem encoding, probably bug in code.", e);
     }
   }
-
 }
